--- a/client/app/views/login.html
+++ b/client/app/views/login.html
@@ -19,7 +19,7 @@
             <a href="/#/recoverPass">Recuperar contraseña</a>
         </p>
         <br>
-        <md-button class="md-raised md-warn tc-white" aria-label="Entrar" style="float:right;">
+        <md-button type="submit" class="md-raised md-warn tc-white" aria-label="Entrar" style="float:right;">
           <md-icon md-font-icon="fa fa-lock fa-lg tc-white"></md-icon>
           Entrar
         </md-button>
