--- a/client/app/views/matricula/inscripcion.html
+++ b/client/app/views/matricula/inscripcion.html
@@ -52,7 +52,7 @@
               <tbody>
             </table>
             <div class="text-center">
-              <button class="btn btn-success" ng-click="NextPage()">FINALIZAR MATRICULA</button>
+              <button class="btn btn-success" ng-click="FinalizarMatricula()">FINALIZAR MATRICULA</button>
             </div>
           </div>
         </md-content>
