Correcion de UI y compromisopago ingresante

--- a/client/app/views/aprobacion/ingresantes/list.html
+++ b/client/app/views/aprobacion/ingresantes/list.html
@@ -49,10 +49,10 @@
               <span class="fa fa-square  fa-lg tc-blue-grey-50" ng-class="{'fa-check-square tc-{{$root.color.accent}}-500':item.active}"></span>
             </td>
             <td class="text-left" data-title="'Código'" sortable="codigoPostulante" filter="{'codigoPostulante':'text'}">{{item.codigoPostulante}}</td>
-            <td class="text-left" data-title="'Nombres'" sortable="nombres" filter="{'nombres':'text'}">{{item.nombres}}</td>
-            <td class="text-left" data-title="'Apellido Paterno'" sortable="apellidoPaterno" filter="{'apellidoPaterno':'text'}">{{item.apellidoPaterno}}</td>
-            <td class="text-left" data-title="'Apellido Materno'" sortable="apellidoMaterno" filter="{'apellidoMaterno':'text'}">{{item.apellidoMaterno}}</td>
-            <td class="text-left" data-title="'Sexo'" sortable="sexo" filter="{'sexo':'text'}">{{item.sexo}}</td>
+            <td class="text-left" data-title="'Nombres'" sortable="nombres" filter="{'nombres':'text'}">{{item._persona.nombres}}</td>
+            <td class="text-left" data-title="'Apellido Paterno'" sortable="apellidoPaterno" filter="{'apellidoPaterno':'text'}">{{item._persona.apellidoPaterno}}</td>
+            <td class="text-left" data-title="'Apellido Materno'" sortable="apellidoMaterno" filter="{'apellidoMaterno':'text'}">{{item._persona.apellidoMaterno}}</td>
+            <td class="text-left" data-title="'Sexo'" sortable="sexo" filter="{'sexo':'text'}">{{item._persona.sexo}}</td>
           </tr>
         </tbody>
       </table>
