--- a/client/app/views/conflictos/form.html
+++ b/client/app/views/conflictos/form.html
@@ -9,7 +9,7 @@
         </md-button>
       </div>
     </md-toolbar>
-    <md-dialog-content class="window-modal-content-sm">
+    <md-dialog-content class="window-modal-content-sm  md-padding">
       <div flex layout="row" layout-sm="row">
         <div flex>
           <md-input-container class="md-block">
