--- a/client/app/views/getcode.html
+++ b/client/app/views/getcode.html
@@ -5,7 +5,7 @@
       <span class="fs-caption display-block">{{app.corporation}}</span>
 
       <form ng-submit="Login()" class="text-left fs-body-1">
-        <lx-text-field label="Ingrese su correo electrónico">
+        <lx-text-field label="Ingrese su documento de identidad">
           <input type="text" ng-model="user.email">
         </lx-text-field>
 
