--- a/client/app/views/periodos/periodoprocesos-form.html
+++ b/client/app/views/periodos/periodoprocesos-form.html
@@ -9,13 +9,32 @@
         </md-button>
       </div>
     </md-toolbar>
-    <md-dialog-content class="window-modal-content-sm">
+    <md-dialog-content class="window-modal-content-md md-padding">
       <div flex layout="row" layout-sm="row">
         <div flex>
           <md-input-container class="md-block">
             <label>Periodo</label>
             <input required name="periodo" ng-model="_periodo.nombre" readonly>
             <div ng-messages="myForm.periodo.$error" ng-if="submited">
+              <div ng-message="required">{{message.Required}}</div>
+            </div>
+          </md-input-container>
+        </div>
+        <div flex>
+          <md-input-container class="md-block">
+            <label>Fecha Inicio</label>
+            <input type="date" required name="fechaInicio" ng-model="model.fechaInicio">
+            <div ng-messages="myForm.fechaInicio.$error" ng-if="submited">
+              <div ng-message="required">{{message.Required}}</div>
+            </div>
+          </md-input-container>
+
+        </div>
+        <div flex>
+          <md-input-container class="md-block">
+            <label>Fecha Fin</label>
+            <input type="date" required name="fechaFin" ng-model="model.fechaFin">
+            <div ng-messages="myForm.fechaFin.$error" ng-if="submited">
               <div ng-message="required">{{message.Required}}</div>
             </div>
           </md-input-container>
@@ -37,53 +56,18 @@
             </div>
           </md-input-container>
         </div>
+
       </div>
 
-      <div flex layout="row" layout-sm="row">
-        <div flex>
-          <md-input-container class="md-block">
-            <md-datepicker required name="fechaInicio" ng-model="model.fechaInicio" md-placeholder="Fecha Inicio"></md-datepicker>
-            <div ng-messages="myForm.fechaInicio.$error" ng-if="submited">
-              <div ng-message="required">{{message.Required}}</div>
-            </div>
-          </md-input-container>
-        </div>
-        <div flex>
-          <md-input-container class="md-block">
-            <md-datepicker required name="fechaFin" ng-model="model.fechaFin" md-placeholder="Fecha Fin"></md-datepicker>
-            <div ng-messages="myForm.fechaFin.$error" ng-if="submited">
-              <div ng-message="required">{{message.Required}}</div>
-            </div>
-          </md-input-container>
-        </div>
-        <!--div flex>
-          <md-input-container class="md-block">
-            <label>Estado</label>
-            <md-select ng-model="model.estado">
-                <md-option value="Ejecutado">Ejecutado</md-option>
-                <md-option value="No Ejecutado">No Ejecutado</md-option>
-            </md-select>
-            <div ng-messages="myForm.estado.$error" ng-if="submited">
-              <div ng-message="required">{{message.Required}}</div>
-            </div>
-          </md-input-container>
-      </div-->
-      </div>
 
-      <div flex layout="row" layout-sm="column">
-        <div flex="30" layout-align="start start" flex-sm="100" class="text-left">
-          <md-checkbox ng-model="model.activo">
-            Activo
-          </md-checkbox>
-        </div>
-        <div flex="70" layout="row" layout-align="end center" flex-sm="100">
-          <md-button class="md-raised" ng-click="Cancel()">{{Buttons.Cancel}}</md-button>
-          <md-button class="md-raised md-primary" ng-click="Save(myForm)">{{Buttons.Save}}</md-button>
-        </div>
-      </div>
     </md-dialog-content>
     <md-dialog-actions layout="row">
-
+      <md-checkbox ng-model="model.activo">
+        Activo
+      </md-checkbox>
+      <span flex></span>
+      <md-button class="md-raised" ng-click="Cancel()">{{Buttons.Cancel}}</md-button>
+      <md-button class="md-raised md-primary" ng-click="Save(myForm)">{{Buttons.Save}}</md-button>
     </md-dialog-actions>
   </form>
 </md-dialog>
