--- a/client/app/styles/styls/main.styl
+++ b/client/app/styles/styls/main.styl
@@ -219,6 +219,10 @@ a.groupTitle
 	min-width 700px
 	max-height 800px
 
+.window-modal-content-md
+	min-width 900px
+	max-height 800px
+
 .table
 	min-width 500px
 
