--- a/client/app/views/compromisopagos/list.html
+++ b/client/app/views/compromisopagos/list.html
@@ -30,40 +30,14 @@
 </md-content>
 
 <!-- Button New: solo visible cuando ningun elemento de la lista ha sido seleccionado-->
-<md-button ng-if="!UI.editMode" ng-click="Generar($event)" class="md-fab md-fab-bottom-right" aria-label="{{UI.message.Buttons.New}}" >
-  <md-tooltip md-direction="left">{{UI.message.Buttons.New}}</md-tooltip>
-  <md-icon md-font-icon="fa fa-cloud-download fa-lg tc-white"></md-icon>
-</md-button>
+  <md-button ng-if="!UI.editMode" ng-click="Generar($event)" class="md-fab md-fab-bottom-right" aria-label="{{UI.message.Buttons.New}}" >
+    <md-tooltip md-direction="left">{{UI.message.Buttons.New}}</md-tooltip>
+    <md-icon md-font-icon="fa fa-cloud-download fa-lg tc-white"></md-icon>
+  </md-button>
+
+<form  action="api/compromisopagos/methods/process" method="post">
+  <button id="btnDownloadRecaudo" type="submit" ng-show="false">Download</button>
+</form>
+
 
 <!--acciones: se mostraran al seleccionar un elemento del listado-->
-<md-fab-speed-dial ng-if="UI.editMode" md-open="false" md-direction="up" class="md-fling md-fab-bottom-right">
- <md-fab-trigger>
-   <md-button aria-label="menu" class="md-fab">
-     <md-icon md-font-icon="fa fa-bars fa-lg tc-white"></md-icon>
-   </md-button>
- </md-fab-trigger>
-
- <md-fab-actions>
-   <!--custom actions: Se agregan en el controlador solo cuando es necesario considerar mas opciones para cada elemento de la lista-->
-   <md-button ng-repeat="action in UI.customActions" aria-label="{{action.label}}" class="md-fab md-raised md-mini" ng-click="action.onclick($event)">
-     <md-tooltip md-direction="left">{{action.label}}</md-tooltip>
-     <md-icon class="md-accent" md-font-icon="fa fa-building fa-lg  tc-{{$root.color.accent}}-500" aria-label="{{action.label}}"></md-icon>
-   </md-button>
-   <!--end custom actions-->
-
-   <!--default actions: Acciones por defecto que contendra cada interfaz de mantenimiento-->
-   <md-button aria-label="{{UI.message.Buttons.New}}" class="md-fab md-raised md-mini" ng-click="New($event)">
-     <md-tooltip md-direction="left">{{UI.message.Buttons.New}}</md-tooltip>
-     <md-icon  md-font-icon="fa fa-plus fa-lg  tc-{{$root.color.accent}}-500" aria-label="{{UI.message.Buttons.New}}"></md-icon>
-   </md-button>
-   <md-button aria-label="{{UI.message.Buttons.Edit}}" class="md-fab md-raised md-mini" ng-click="Edit($event)">
-     <md-tooltip md-direction="left">{{UI.message.Buttons.Edit}}</md-tooltip>
-     <md-icon class="md-accent" md-font-icon="fa fa-pencil fa-lg  tc-{{$root.color.accent}}-500 " aria-label="{{UI.message.Buttons.Edit}}"></md-icon>
-   </md-button>
-   <md-button aria-label="{{UI.message.Buttons.Delete}}" class="md-raised  md-fab md-mini" ng-click="Delete($event)">
-     <md-tooltip md-direction="left">{{UI.message.Buttons.Delete}}</md-tooltip>
-     <md-icon md-font-icon="fa fa-trash fa-lg md-accent  tc-{{$root.color.accent}}-500" aria-label="{{UI.message.Buttons.Delete}}"></md-icon>
-   </md-button>
-   <!--end default actions-->
- </md-fab-actions>
-</md-fab-speed-dial>
