--- a/client/app/views/matricula/inscripcion-form.html
+++ b/client/app/views/matricula/inscripcion-form.html
@@ -20,11 +20,13 @@
                   <th colspan="2">Curso/Grupo</th>
                   <th>Código</th>
                   <th>Ciclo</th>
-                  <th>N° Creditos</th>
-                  <th>N° Horas</th>
-                  <th>N° Horas Teoria</th>
-                  <th>N° Horas Práctica</th>
-                  <th>N° Horas Laboratorio</th>
+                  <th>N° Cred</th>
+                  <th>N° Hrs</th>
+                  <th>N° Hrs Teoria</th>
+                  <th>N° Hrs Práctica</th>
+                  <th>N° Hrs Laboratorio</th>
+                  <th>Día</th>
+                  <th>Hr Inicio / Hr Fin</th>
                 </tr>
               </thead>
               <tbody ng-repeat="curso in cursoshabilitados">
@@ -42,6 +44,8 @@
                   <td><strong>{{ curso._planestudiodetalle.horas_teoria }} </strong></td>
                   <td><strong>{{ curso._planestudiodetalle.horas_practica }} </strong></td>
                   <td><strong>{{ curso._planestudiodetalle.horas_laboratorio }} </strong></td>
+                  <td></td>
+                  <td></td>
                 </tr>
                 <tr ng-hide="curso.$hideRows" ng-repeat="item in curso._grupos" ng-click="item.active=!item.active;EnabledEdit(item, curso)">
                   <td style="width:30px;">
@@ -55,6 +59,20 @@
                   <td data-title="'N° Horas Teoria'"></td>
                   <td data-title="'N° Horas Práctica'"></td>
                   <td data-title="'N° Horas Laboratorio'"></td>
+                  <td data-title="'Día'">
+                    <md-list>
+                      <md-list-item style="min-height: inherit!important" ng-repeat="horario in item._programaciones[0].horarios">
+                        <p> {{ horario.dia }} </p>
+                      </md-list-item>
+                    </md-list>
+                  </td>
+                  <td data-title="'Hora Inicio / Hora Fin'">
+                    <md-list>
+                      <md-list-item style="min-height: inherit!important" ng-repeat="horario in item._programaciones[0].horarios">
+                        <p> {{ horario.horaInicio | date : 'hh:mm' }} / {{ horario.horaFin | date : 'hh:mm' }} </p>
+                      </md-list-item>
+                    </md-list>
+                  </td>
                 </tr>
               </tbody>
             </table>
